Backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ALTER
    ARROBA
    BITPRIM
    CAS
    CONCATENA
    CONTAR
    CORCHETE_DER
    CORCHETE_IZQ
    DATEPRIM
    DATETIMEPRIM
    DELETE
    DOS_PUNTOS
    DROP
    EXEC
    FOREIGN
    FOREING
    FROM
    HOY
    IF
    INSERT
    LLAVE_DER
    LLAVE_IZQ
    NEGACION
    PUNTO
    REFERENCE
    SELECT
    SUBSTRAER
    SUMA
    TRUNCATE
    UPDATE
    USAR
    WHERE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> crearBaseDatos PUNTO_Y_COMA
Rule 5     instruccion -> crearTabla PUNTO_Y_COMA
Rule 6     instruccion -> funcion_usuario PUNTO_Y_COMA
Rule 7     instruccion -> procedure
Rule 8     crearBaseDatos -> CREATE DATA BASE ID
Rule 9     crearTabla -> CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER
Rule 10    tablasEspecifico -> tablasEspecifico COMA columnaDefinicion
Rule 11    tablasEspecifico -> columnaDefinicion
Rule 12    columnaDefinicion -> ID tipo_dato nulidad_parametro restriccion_parametro
Rule 13    tipo_dato -> R_INT
Rule 14    tipo_dato -> R_DECIMAL
Rule 15    tipo_dato -> R_BIT
Rule 16    tipo_dato -> DATETIME
Rule 17    tipo_dato -> DATE
Rule 18    tipo_dato -> VARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 19    tipo_dato -> NVARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 20    tipo_dato -> NCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 21    nulidad_parametro -> NULL
Rule 22    nulidad_parametro -> NOT NULL
Rule 23    nulidad_parametro -> <empty>
Rule 24    restriccion_parametro -> PRIMARY KEY
Rule 25    restriccion_parametro -> REFERENCES ID
Rule 26    restriccion_parametro -> <empty>
Rule 27    expresion -> expresion MENOR_QUE expresion
Rule 28    expresion -> expresion MAYOR_QUE expresion
Rule 29    expresion -> expresion MENOR_O_IGUAL_QUE expresion
Rule 30    expresion -> expresion MAYOR_O_IGUAL_QUE expresion
Rule 31    expresion -> expresion COMPARACION expresion
Rule 32    expresion -> expresion DISTINTO expresion
Rule 33    expresion -> expresion AND expresion
Rule 34    expresion -> expresion OR expresion
Rule 35    expresion -> expresion MAS expresion
Rule 36    expresion -> expresion MENOS expresion
Rule 37    expresion -> expresion POR expresion
Rule 38    expresion -> expresion DIVISION expresion
Rule 39    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 40    expresion -> ENTERO
Rule 41    expresion -> DECIMAL
Rule 42    expresion -> STR
Rule 43    expresion -> ID_DECLARE
Rule 44    funcion_usuario -> CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
Rule 45    parametros_funcion -> parametros_funcion COMA parametro_funcion
Rule 46    parametros_funcion -> parametro_funcion
Rule 47    parametro_funcion -> ID_DECLARE tipo_dato_parametro
Rule 48    tipo_dato_parametro -> R_INT
Rule 49    tipo_dato_variable -> tipo_dato
Rule 50    sentencias_funciones -> sentencias_funciones sentencia_funcion
Rule 51    sentencias_funciones -> sentencia_funcion
Rule 52    sentencia_funcion -> declaracion_variables
Rule 53    sentencia_funcion -> set_variable_funcion
Rule 54    sentencia_funcion -> return
Rule 55    declaracion_variables -> DECLARE lista_declaracion_variables PUNTO_Y_COMA
Rule 56    lista_declaracion_variables -> lista_declaracion_variables COMA declaracion_variable
Rule 57    lista_declaracion_variables -> declaracion_variable
Rule 58    declaracion_variable -> ID_DECLARE tipo_dato_variable
Rule 59    set_variable_funcion -> SET ID_DECLARE ASIGNACION asignacion_set PUNTO_Y_COMA
Rule 60    asignacion_set -> expresion
Rule 61    asignacion_set -> llamada_funcion
Rule 62    return -> RETURN expresion
Rule 63    llamada_funcion -> ID PARENTESIS_IZQ parametros_llamada_funcion PARENTESIS_DER
Rule 64    llamada_funcion -> ID PARENTESIS_IZQ PARENTESIS_DER
Rule 65    parametros_llamada_funcion -> parametros_llamada_funcion COMA parametro_llamada_funcion
Rule 66    parametros_llamada_funcion -> parametro_llamada_funcion
Rule 67    parametro_llamada_funcion -> expresion
Rule 68    procedure -> CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA
Rule 69    parametros_procedure -> parametros_procedure COMA parametro_procedure
Rule 70    parametros_procedure -> parametro_procedure
Rule 71    parametro_procedure -> ID_DECLARE tipo_dato
Rule 72    parametros_llamado_funcion -> parametros_llamado_funcion COMA parametro_llamado_funcion
Rule 73    parametros_llamado_funcion -> parametro_llamado_funcion
Rule 74    parametro_llamado_funcion -> expresion

Terminals, with rules where they appear

ADD                  : 
ALTER                : 
AND                  : 33
ARROBA               : 
AS                   : 44 68
ASIGNACION           : 59
BASE                 : 8
BEGIN                : 44 68
BITPRIM              : 
CAS                  : 
COMA                 : 10 45 56 65 69 72
COMPARACION          : 31
CONCATENA            : 
CONTAR               : 
CORCHETE_DER         : 
CORCHETE_IZQ         : 
CREATE               : 8 9 44 68
DATA                 : 8
DATE                 : 17
DATEPRIM             : 
DATETIME             : 16
DATETIMEPRIM         : 
DECIMAL              : 41
DECLARE              : 55
DELETE               : 
DISTINTO             : 32
DIVISION             : 38
DOS_PUNTOS           : 
DROP                 : 
END                  : 44 68
ENTERO               : 40
EXEC                 : 
FOREIGN              : 
FOREING              : 
FROM                 : 
FUNCTION             : 44
HOY                  : 
ID                   : 8 9 12 25 44 63 64 68
ID_DECLARE           : 43 47 58 59 71
IF                   : 
INSERT               : 
KEY                  : 24
LLAVE_DER            : 
LLAVE_IZQ            : 
MAS                  : 35
MAYOR_O_IGUAL_QUE    : 30
MAYOR_QUE            : 28
MENOR_O_IGUAL_QUE    : 29
MENOR_QUE            : 27
MENOS                : 36
NCHAR                : 20
NEGACION             : 
NOT                  : 22
NULL                 : 21 22
NVARCHAR             : 19
OR                   : 34
PARENTESIS_DER       : 9 18 19 20 39 44 63 64 68
PARENTESIS_IZQ       : 9 18 19 20 39 44 63 64 68
POR                  : 37
PRIMARY              : 24
PROCEDURE            : 68
PUNTO                : 
PUNTO_Y_COMA         : 4 5 6 44 55 59 68
REFERENCE            : 
REFERENCES           : 25
RETURN               : 62
RETURNS              : 44
R_BIT                : 15
R_DECIMAL            : 14
R_INT                : 13 48
SELECT               : 
SET                  : 59
STR                  : 42
SUBSTRAER            : 
SUMA                 : 
TABLE                : 9
TRUNCATE             : 
UPDATE               : 
USAR                 : 
VARCHAR              : 18
WHERE                : 
error                : 

Nonterminals, with rules where they appear

asignacion_set       : 59
columnaDefinicion    : 10 11
crearBaseDatos       : 4
crearTabla           : 5
declaracion_variable : 56 57
declaracion_variables : 52
expresion            : 18 19 20 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 60 62 67 74
funcion_usuario      : 6
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
lista_declaracion_variables : 55 56
llamada_funcion      : 61
nulidad_parametro    : 12
parametro_funcion    : 45 46
parametro_llamada_funcion : 65 66
parametro_llamado_funcion : 72 73
parametro_procedure  : 69 70
parametros_funcion   : 44 45
parametros_llamada_funcion : 63 65
parametros_llamado_funcion : 72
parametros_procedure : 68 69
procedure            : 7
restriccion_parametro : 12
return               : 54
sentencia_funcion    : 50 51
sentencias_funciones : 44 50 68
set_variable_funcion : 53
tablasEspecifico     : 9 10
tipo_dato            : 12 49 71
tipo_dato_parametro  : 44 47
tipo_dato_variable   : 58

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . crearBaseDatos PUNTO_Y_COMA
    (5) instruccion -> . crearTabla PUNTO_Y_COMA
    (6) instruccion -> . funcion_usuario PUNTO_Y_COMA
    (7) instruccion -> . procedure
    (8) crearBaseDatos -> . CREATE DATA BASE ID
    (9) crearTabla -> . CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER
    (44) funcion_usuario -> . CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (68) procedure -> . CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    CREATE          shift and go to state 8

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    crearBaseDatos                 shift and go to state 4
    crearTabla                     shift and go to state 5
    funcion_usuario                shift and go to state 6
    procedure                      shift and go to state 7

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . crearBaseDatos PUNTO_Y_COMA
    (5) instruccion -> . crearTabla PUNTO_Y_COMA
    (6) instruccion -> . funcion_usuario PUNTO_Y_COMA
    (7) instruccion -> . procedure
    (8) crearBaseDatos -> . CREATE DATA BASE ID
    (9) crearTabla -> . CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER
    (44) funcion_usuario -> . CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (68) procedure -> . CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CREATE          shift and go to state 8

    instruccion                    shift and go to state 9
    crearBaseDatos                 shift and go to state 4
    crearTabla                     shift and go to state 5
    funcion_usuario                shift and go to state 6
    procedure                      shift and go to state 7

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> crearBaseDatos . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 10


state 5

    (5) instruccion -> crearTabla . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 11


state 6

    (6) instruccion -> funcion_usuario . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 12


state 7

    (7) instruccion -> procedure .

    CREATE          reduce using rule 7 (instruccion -> procedure .)
    $end            reduce using rule 7 (instruccion -> procedure .)


state 8

    (8) crearBaseDatos -> CREATE . DATA BASE ID
    (9) crearTabla -> CREATE . TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER
    (44) funcion_usuario -> CREATE . FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (68) procedure -> CREATE . PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    DATA            shift and go to state 13
    TABLE           shift and go to state 14
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16


state 9

    (2) instrucciones -> instrucciones instruccion .

    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 10

    (4) instruccion -> crearBaseDatos PUNTO_Y_COMA .

    CREATE          reduce using rule 4 (instruccion -> crearBaseDatos PUNTO_Y_COMA .)
    $end            reduce using rule 4 (instruccion -> crearBaseDatos PUNTO_Y_COMA .)


state 11

    (5) instruccion -> crearTabla PUNTO_Y_COMA .

    CREATE          reduce using rule 5 (instruccion -> crearTabla PUNTO_Y_COMA .)
    $end            reduce using rule 5 (instruccion -> crearTabla PUNTO_Y_COMA .)


state 12

    (6) instruccion -> funcion_usuario PUNTO_Y_COMA .

    CREATE          reduce using rule 6 (instruccion -> funcion_usuario PUNTO_Y_COMA .)
    $end            reduce using rule 6 (instruccion -> funcion_usuario PUNTO_Y_COMA .)


state 13

    (8) crearBaseDatos -> CREATE DATA . BASE ID

    BASE            shift and go to state 17


state 14

    (9) crearTabla -> CREATE TABLE . ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER

    ID              shift and go to state 18


state 15

    (44) funcion_usuario -> CREATE FUNCTION . ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END

    ID              shift and go to state 19


state 16

    (68) procedure -> CREATE PROCEDURE . ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    ID              shift and go to state 20


state 17

    (8) crearBaseDatos -> CREATE DATA BASE . ID

    ID              shift and go to state 21


state 18

    (9) crearTabla -> CREATE TABLE ID . PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 22


state 19

    (44) funcion_usuario -> CREATE FUNCTION ID . PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END

    PARENTESIS_IZQ  shift and go to state 23


state 20

    (68) procedure -> CREATE PROCEDURE ID . PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    PARENTESIS_IZQ  shift and go to state 24


state 21

    (8) crearBaseDatos -> CREATE DATA BASE ID .

    PUNTO_Y_COMA    reduce using rule 8 (crearBaseDatos -> CREATE DATA BASE ID .)


state 22

    (9) crearTabla -> CREATE TABLE ID PARENTESIS_IZQ . tablasEspecifico PARENTESIS_DER
    (10) tablasEspecifico -> . tablasEspecifico COMA columnaDefinicion
    (11) tablasEspecifico -> . columnaDefinicion
    (12) columnaDefinicion -> . ID tipo_dato nulidad_parametro restriccion_parametro

    ID              shift and go to state 25

    tablasEspecifico               shift and go to state 26
    columnaDefinicion              shift and go to state 27

state 23

    (44) funcion_usuario -> CREATE FUNCTION ID PARENTESIS_IZQ . parametros_funcion PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (45) parametros_funcion -> . parametros_funcion COMA parametro_funcion
    (46) parametros_funcion -> . parametro_funcion
    (47) parametro_funcion -> . ID_DECLARE tipo_dato_parametro

    ID_DECLARE      shift and go to state 30

    parametros_funcion             shift and go to state 28
    parametro_funcion              shift and go to state 29

state 24

    (68) procedure -> CREATE PROCEDURE ID PARENTESIS_IZQ . parametros_procedure PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA
    (69) parametros_procedure -> . parametros_procedure COMA parametro_procedure
    (70) parametros_procedure -> . parametro_procedure
    (71) parametro_procedure -> . ID_DECLARE tipo_dato

    ID_DECLARE      shift and go to state 33

    parametros_procedure           shift and go to state 31
    parametro_procedure            shift and go to state 32

state 25

    (12) columnaDefinicion -> ID . tipo_dato nulidad_parametro restriccion_parametro
    (13) tipo_dato -> . R_INT
    (14) tipo_dato -> . R_DECIMAL
    (15) tipo_dato -> . R_BIT
    (16) tipo_dato -> . DATETIME
    (17) tipo_dato -> . DATE
    (18) tipo_dato -> . VARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
    (19) tipo_dato -> . NVARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
    (20) tipo_dato -> . NCHAR PARENTESIS_IZQ expresion PARENTESIS_DER

    R_INT           shift and go to state 35
    R_DECIMAL       shift and go to state 36
    R_BIT           shift and go to state 37
    DATETIME        shift and go to state 38
    DATE            shift and go to state 39
    VARCHAR         shift and go to state 40
    NVARCHAR        shift and go to state 41
    NCHAR           shift and go to state 42

    tipo_dato                      shift and go to state 34

state 26

    (9) crearTabla -> CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico . PARENTESIS_DER
    (10) tablasEspecifico -> tablasEspecifico . COMA columnaDefinicion

    PARENTESIS_DER  shift and go to state 43
    COMA            shift and go to state 44


state 27

    (11) tablasEspecifico -> columnaDefinicion .

    PARENTESIS_DER  reduce using rule 11 (tablasEspecifico -> columnaDefinicion .)
    COMA            reduce using rule 11 (tablasEspecifico -> columnaDefinicion .)


state 28

    (44) funcion_usuario -> CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion . PARENTESIS_DER RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (45) parametros_funcion -> parametros_funcion . COMA parametro_funcion

    PARENTESIS_DER  shift and go to state 45
    COMA            shift and go to state 46


state 29

    (46) parametros_funcion -> parametro_funcion .

    PARENTESIS_DER  reduce using rule 46 (parametros_funcion -> parametro_funcion .)
    COMA            reduce using rule 46 (parametros_funcion -> parametro_funcion .)


state 30

    (47) parametro_funcion -> ID_DECLARE . tipo_dato_parametro
    (48) tipo_dato_parametro -> . R_INT

    R_INT           shift and go to state 48

    tipo_dato_parametro            shift and go to state 47

state 31

    (68) procedure -> CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure . PARENTESIS_DER AS BEGIN sentencias_funciones END PUNTO_Y_COMA
    (69) parametros_procedure -> parametros_procedure . COMA parametro_procedure

    PARENTESIS_DER  shift and go to state 49
    COMA            shift and go to state 50


state 32

    (70) parametros_procedure -> parametro_procedure .

    PARENTESIS_DER  reduce using rule 70 (parametros_procedure -> parametro_procedure .)
    COMA            reduce using rule 70 (parametros_procedure -> parametro_procedure .)


state 33

    (71) parametro_procedure -> ID_DECLARE . tipo_dato
    (13) tipo_dato -> . R_INT
    (14) tipo_dato -> . R_DECIMAL
    (15) tipo_dato -> . R_BIT
    (16) tipo_dato -> . DATETIME
    (17) tipo_dato -> . DATE
    (18) tipo_dato -> . VARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
    (19) tipo_dato -> . NVARCHAR PARENTESIS_IZQ expresion PARENTESIS_DER
    (20) tipo_dato -> . NCHAR PARENTESIS_IZQ expresion PARENTESIS_DER

    R_INT           shift and go to state 35
    R_DECIMAL       shift and go to state 36
    R_BIT           shift and go to state 37
    DATETIME        shift and go to state 38
    DATE            shift and go to state 39
    VARCHAR         shift and go to state 40
    NVARCHAR        shift and go to state 41
    NCHAR           shift and go to state 42

    tipo_dato                      shift and go to state 51

state 34

    (12) columnaDefinicion -> ID tipo_dato . nulidad_parametro restriccion_parametro
    (21) nulidad_parametro -> . NULL
    (22) nulidad_parametro -> . NOT NULL
    (23) nulidad_parametro -> .

    NULL            shift and go to state 53
    NOT             shift and go to state 54
    PRIMARY         reduce using rule 23 (nulidad_parametro -> .)
    REFERENCES      reduce using rule 23 (nulidad_parametro -> .)
    PARENTESIS_DER  reduce using rule 23 (nulidad_parametro -> .)
    COMA            reduce using rule 23 (nulidad_parametro -> .)

    nulidad_parametro              shift and go to state 52

state 35

    (13) tipo_dato -> R_INT .

    NULL            reduce using rule 13 (tipo_dato -> R_INT .)
    NOT             reduce using rule 13 (tipo_dato -> R_INT .)
    PRIMARY         reduce using rule 13 (tipo_dato -> R_INT .)
    REFERENCES      reduce using rule 13 (tipo_dato -> R_INT .)
    PARENTESIS_DER  reduce using rule 13 (tipo_dato -> R_INT .)
    COMA            reduce using rule 13 (tipo_dato -> R_INT .)
    PUNTO_Y_COMA    reduce using rule 13 (tipo_dato -> R_INT .)


state 36

    (14) tipo_dato -> R_DECIMAL .

    NULL            reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    NOT             reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    PRIMARY         reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    REFERENCES      reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    PARENTESIS_DER  reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    COMA            reduce using rule 14 (tipo_dato -> R_DECIMAL .)
    PUNTO_Y_COMA    reduce using rule 14 (tipo_dato -> R_DECIMAL .)


state 37

    (15) tipo_dato -> R_BIT .

    NULL            reduce using rule 15 (tipo_dato -> R_BIT .)
    NOT             reduce using rule 15 (tipo_dato -> R_BIT .)
    PRIMARY         reduce using rule 15 (tipo_dato -> R_BIT .)
    REFERENCES      reduce using rule 15 (tipo_dato -> R_BIT .)
    PARENTESIS_DER  reduce using rule 15 (tipo_dato -> R_BIT .)
    COMA            reduce using rule 15 (tipo_dato -> R_BIT .)
    PUNTO_Y_COMA    reduce using rule 15 (tipo_dato -> R_BIT .)


state 38

    (16) tipo_dato -> DATETIME .

    NULL            reduce using rule 16 (tipo_dato -> DATETIME .)
    NOT             reduce using rule 16 (tipo_dato -> DATETIME .)
    PRIMARY         reduce using rule 16 (tipo_dato -> DATETIME .)
    REFERENCES      reduce using rule 16 (tipo_dato -> DATETIME .)
    PARENTESIS_DER  reduce using rule 16 (tipo_dato -> DATETIME .)
    COMA            reduce using rule 16 (tipo_dato -> DATETIME .)
    PUNTO_Y_COMA    reduce using rule 16 (tipo_dato -> DATETIME .)


state 39

    (17) tipo_dato -> DATE .

    NULL            reduce using rule 17 (tipo_dato -> DATE .)
    NOT             reduce using rule 17 (tipo_dato -> DATE .)
    PRIMARY         reduce using rule 17 (tipo_dato -> DATE .)
    REFERENCES      reduce using rule 17 (tipo_dato -> DATE .)
    PARENTESIS_DER  reduce using rule 17 (tipo_dato -> DATE .)
    COMA            reduce using rule 17 (tipo_dato -> DATE .)
    PUNTO_Y_COMA    reduce using rule 17 (tipo_dato -> DATE .)


state 40

    (18) tipo_dato -> VARCHAR . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 55


state 41

    (19) tipo_dato -> NVARCHAR . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 56


state 42

    (20) tipo_dato -> NCHAR . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 57


state 43

    (9) crearTabla -> CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER .

    PUNTO_Y_COMA    reduce using rule 9 (crearTabla -> CREATE TABLE ID PARENTESIS_IZQ tablasEspecifico PARENTESIS_DER .)


state 44

    (10) tablasEspecifico -> tablasEspecifico COMA . columnaDefinicion
    (12) columnaDefinicion -> . ID tipo_dato nulidad_parametro restriccion_parametro

    ID              shift and go to state 25

    columnaDefinicion              shift and go to state 58

state 45

    (44) funcion_usuario -> CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER . RETURNS tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END

    RETURNS         shift and go to state 59


state 46

    (45) parametros_funcion -> parametros_funcion COMA . parametro_funcion
    (47) parametro_funcion -> . ID_DECLARE tipo_dato_parametro

    ID_DECLARE      shift and go to state 30

    parametro_funcion              shift and go to state 60

state 47

    (47) parametro_funcion -> ID_DECLARE tipo_dato_parametro .

    PARENTESIS_DER  reduce using rule 47 (parametro_funcion -> ID_DECLARE tipo_dato_parametro .)
    COMA            reduce using rule 47 (parametro_funcion -> ID_DECLARE tipo_dato_parametro .)


state 48

    (48) tipo_dato_parametro -> R_INT .

    PARENTESIS_DER  reduce using rule 48 (tipo_dato_parametro -> R_INT .)
    COMA            reduce using rule 48 (tipo_dato_parametro -> R_INT .)
    AS              reduce using rule 48 (tipo_dato_parametro -> R_INT .)


state 49

    (68) procedure -> CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER . AS BEGIN sentencias_funciones END PUNTO_Y_COMA

    AS              shift and go to state 61


state 50

    (69) parametros_procedure -> parametros_procedure COMA . parametro_procedure
    (71) parametro_procedure -> . ID_DECLARE tipo_dato

    ID_DECLARE      shift and go to state 33

    parametro_procedure            shift and go to state 62

state 51

    (71) parametro_procedure -> ID_DECLARE tipo_dato .

    PARENTESIS_DER  reduce using rule 71 (parametro_procedure -> ID_DECLARE tipo_dato .)
    COMA            reduce using rule 71 (parametro_procedure -> ID_DECLARE tipo_dato .)


state 52

    (12) columnaDefinicion -> ID tipo_dato nulidad_parametro . restriccion_parametro
    (24) restriccion_parametro -> . PRIMARY KEY
    (25) restriccion_parametro -> . REFERENCES ID
    (26) restriccion_parametro -> .

    PRIMARY         shift and go to state 64
    REFERENCES      shift and go to state 65
    PARENTESIS_DER  reduce using rule 26 (restriccion_parametro -> .)
    COMA            reduce using rule 26 (restriccion_parametro -> .)

    restriccion_parametro          shift and go to state 63

state 53

    (21) nulidad_parametro -> NULL .

    PRIMARY         reduce using rule 21 (nulidad_parametro -> NULL .)
    REFERENCES      reduce using rule 21 (nulidad_parametro -> NULL .)
    PARENTESIS_DER  reduce using rule 21 (nulidad_parametro -> NULL .)
    COMA            reduce using rule 21 (nulidad_parametro -> NULL .)


state 54

    (22) nulidad_parametro -> NOT . NULL

    NULL            shift and go to state 66


state 55

    (18) tipo_dato -> VARCHAR PARENTESIS_IZQ . expresion PARENTESIS_DER
    (27) expresion -> . expresion MENOR_QUE expresion
    (28) expresion -> . expresion MAYOR_QUE expresion
    (29) expresion -> . expresion MENOR_O_IGUAL_QUE expresion
    (30) expresion -> . expresion MAYOR_O_IGUAL_QUE expresion
    (31) expresion -> . expresion COMPARACION expresion
    (32) expresion -> . expresion DISTINTO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (40) expresion -> . ENTERO
    (41) expresion -> . DECIMAL
    (42) expresion -> . STR
    (43) expresion -> . ID_DECLARE

    PARENTESIS_IZQ  shift and go to state 67
    ENTERO          shift and go to state 69
    DECIMAL         shift and go to state 70
    STR             shift and go to state 71
    ID_DECLARE      shift and go to state 72

    expresion                      shift and go to state 68

state 56

    (19) tipo_dato -> NVARCHAR PARENTESIS_IZQ . expresion PARENTESIS_DER
    (27) expresion -> . expresion MENOR_QUE expresion
    (28) expresion -> . expresion MAYOR_QUE expresion
    (29) expresion -> . expresion MENOR_O_IGUAL_QUE expresion
    (30) expresion -> . expresion MAYOR_O_IGUAL_QUE expresion
    (31) expresion -> . expresion COMPARACION expresion
    (32) expresion -> . expresion DISTINTO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (40) expresion -> . ENTERO
    (41) expresion -> . DECIMAL
    (42) expresion -> . STR
    (43) expresion -> . ID_DECLARE

    PARENTESIS_IZQ  shift and go to state 67
    ENTERO          shift and go to state 69
    DECIMAL         shift and go to state 70
    STR             shift and go to state 71
    ID_DECLARE      shift and go to state 72

    expresion                      shift and go to state 73

state 57

    (20) tipo_dato -> NCHAR PARENTESIS_IZQ . expresion PARENTESIS_DER
    (27) expresion -> . expresion MENOR_QUE expresion
    (28) expresion -> . expresion MAYOR_QUE expresion
    (29) expresion -> . expresion MENOR_O_IGUAL_QUE expresion
    (30) expresion -> . expresion MAYOR_O_IGUAL_QUE expresion
    (31) expresion -> . expresion COMPARACION expresion
    (32) expresion -> . expresion DISTINTO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAS expresion
    (36) expresion -> . expresion MENOS expresion
    (37) expresion -> . expresion POR expresion
    (38) expresion -> . expresion DIVISION expresion
    (39) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (40) expresion -> . ENTERO
    (41) expresion -> . DECIMAL
    (42) expresion -> . STR
    (43) expresion -> . ID_DECLARE

    PARENTESIS_IZQ  shift and go to state 67
    ENTERO          shift and go to state 69
    DECIMAL         shift and go to state 70
    STR             shift and go to state 71
    ID_DECLARE      shift and go to state 72

    expresion                      shift and go to state 74

state 58

    (10) tablasEspecifico -> tablasEspecifico COMA columnaDefinicion .

    PARENTESIS_DER  reduce using rule 10 (tablasEspecifico -> tablasEspecifico COMA columnaDefinicion .)
    COMA            reduce using rule 10 (tablasEspecifico -> tablasEspecifico COMA columnaDefinicion .)


state 59

    (44) funcion_usuario -> CREATE FUNCTION ID PARENTESIS_IZQ parametros_funcion PARENTESIS_DER RETURNS . tipo_dato_parametro AS BEGIN sentencias_funciones PUNTO_Y_COMA END
    (48) tipo_dato_parametro -> . R_INT

    R_INT           shift and go to state 48

    tipo_dato_parametro            shift and go to state 75

state 60

    (45) parametros_funcion -> parametros_funcion COMA parametro_funcion .

    PARENTESIS_DER  reduce using rule 45 (parametros_funcion -> parametros_funcion COMA parametro_funcion .)
    COMA            reduce using rule 45 (parametros_funcion -> parametros_funcion COMA parametro_funcion .)


state 61

    (68) procedure -> CREATE PROCEDURE ID PARENTESIS_IZQ parametros_procedure PARENTESIS_DER AS . BEGIN sentencias_funciones END PUNTO_Y_COMA

    BEGIN           shift and go to state 76


state 62

    (69) parametros_procedure -> parametros_procedure COMA parametro_procedure .

    PARENTESIS_DER  reduce using rule 69 (parametros_procedure -> parametros_procedure COMA parametro_procedure .)
    COMA            reduce using rule 69 (parametros_procedure -> parametros_procedure COMA parametro_procedure .)


state 63

    (12) columnaDefinicion -> ID tipo_dato nulidad_parametro restriccion_parametro .
